# arcon

./: .bumpversion.cfg  .conform.yaml  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.rst  package-lock.json  package.json  pyproject.toml  whitelist.py
.github/: COMMIT_POLICY.md
.github/workflows/: build.yaml  ci.yml
arcon/: __init__.py  _version.py
docs/: arcon.rst  conf.py  index.rst  requirements.txt
tests/: TESTS.md  __init__.py  _test.py  conftest.py
