[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
    "poetry-core>=1.0.0",
]

[tool.black]
exclude = '''
/(
  | \.git
  | \.mypy_cache
  | _build
  | build
  | dist
)/
'''
line-length = 79
skip-magic-trailing-comma = true

[tool.constcheck]
ignore_strings = [
    "store",
    "store_true",
    "utf-8",
]

[tool.coverage.report]
fail_under = 100

[tool.coverage.run]
omit = [
    "whitelist.py",
]

[tool.docsig]
check-class = true
summary = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.poetry]
authors = [
    "jshwi <stephen@jshwisolutions.com>",
]
description = "Persistent runtime config"
documentation = "https://arcon.readthedocs.io/en/latest"
homepage = "https://pypi.org/project/arcon/"
keywords = [
    "config",
    "arguments",
    "parser",
    "params",
    "runtime",
]
license = "MIT"
maintainers = [
    "jshwi <stephen@jshwisolutions.com>",
]
name = "arcon"
readme = "README.rst"
repository = "https://github.com/jshwi/arcon"
version = "0.1.1"

[tool.poetry.dependencies]
mergedeep = "^1.3.4"
python = "^3.8"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
bump2version = "^1.0.1"
ipython = "^8.6.0"
pre-commit = "^2.21.0"
prompt-toolkit = "^3.0.32"
pyaud = "^4.0.2"
pylint = "2.15.9"
pytest = "^7.2.0"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.6"
restview = "^3.0.0"
sphinx-toolbox = "^3.2.0"
templatest = "^0.7.0"
tomli-w = "^1.0.0"

[tool.pyaud.audit]
modules = [
    "files",
    "format",
    "format-docs",
    "format-str",
    "imports",
    "typecheck",
    "unused",
    "lint",
    "const",
    "params",
    "test",
    "docs",
]

[tool.pyaud.clean]
exclude = [
    ".mypy_cache",
    ".env",
    "node_modules",
]

[tool.pyaud.indexing]
exclude = [
    "whitelist.py",
    "conf.py",
]

[tool.pyaud.logging]
disable_existing_loggers = true
version = 1

[tool.pyaud.logging.formatters.standard]
format = "%(asctime)s %(levelname)s %(name)s %(message)s"

[tool.pyaud.logging.handlers.default]
backupCount = 60
class = "logging.handlers.TimedRotatingFileHandler"
filename = "~/.cache/pyaud/log/pyaud.log"
formatter = "standard"
when = "d"

[tool.pyaud.logging.root]
handlers = [
    "default",
]
level = "DEBUG"
propagate = false

[tool.pytest.ini_options]
addopts = [
    "--durations=5",
    "-vv",
    "--color=yes",
    "--cov-report",
    "term-missing",
]
filterwarnings = "ignore::DeprecationWarning"
norecursedirs = [
    "docs",
    ".git",
    ".mypy_cache",
    ".idea",
    ".pytest_cache"
]
